--- a/app/src/main/res/layout/fragment_bio.xml
+++ b/app/src/main/res/layout/fragment_bio.xml
@@ -5,6 +5,12 @@
     android:layout_height="match_parent"
     tools:context=".BioFragment">
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
     <Button
         android:id="@+id/btnEdit"
         android:layout_width="wrap_content"
