Fragment bio added

--- a/app/src/main/res/layout/fragment_bio.xml
+++ b/app/src/main/res/layout/fragment_bio.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".BioFragment">
 
+    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
