--- a/app/src/main/res/layout/fragment_bio.xml
+++ b/app/src/main/res/layout/fragment_bio.xml
@@ -10,6 +10,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:text="TextView" />
 
     <Button
