--- a/app/src/main/res/layout/fragment_bio.xml
+++ b/app/src/main/res/layout/fragment_bio.xml
@@ -20,7 +20,7 @@
         android:text="Edit" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fab1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
